--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -9,7 +9,10 @@
 @yellow-dark: #ffcd00;
 
 @gray: #e2e2e2;
-@gray-light: #f7f7f7;
+@gray-light: #fafafa;
+@gray-dark: #fafafa;
 
 @text-dark: #333333;
 @text-light: #858585;
+
+@orange: #db5341;
