--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,3 +7,7 @@
 @import "block/header-menu";
 @import "block/page-footer";
 @import "block/footer-menu";
+
+@import "block/page-content";
+@import "block/grid";
+@import "block/module";
