--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,4 +1,4 @@
-@desktop: 950px;
+@desktop: 1440px;
 @tablet: 768px;
 @mobile: 375px;
 
@@ -10,9 +10,11 @@
 
 @gray: #e2e2e2;
 @gray-light: #fafafa;
-@gray-dark: #fafafa;
+@gray-dark: #f3f3f3;
+@gray-darker: #e5e5e5;
 
 @text-dark: #333333;
 @text-light: #858585;
 
 @orange: #db5341;
+@orange-dark: #c94c3c;
