--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -26,6 +26,10 @@ body {
   .container();
 }
 
+.wrap {
+  .wrap();
+}
+
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
