--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -14,3 +14,20 @@
     padding-left: 40px;
   }
 }
+
+.wrap () {
+  max-width: 2000px;
+  margin: 0 auto;
+  padding-right: 20px;
+  padding-left: 20px;
+
+  @media (min-width: @tablet) {
+    max-width: 1100px;
+    padding-right: 100px;
+    padding-left: 100px;
+  }
+
+  @media (min-width: @desktop) {
+    max-width: 1920px;
+  }
+}
