--- a/source/less/block/page-content.less
+++ b/source/less/block/page-content.less
@@ -1,5 +1,11 @@
 .page-content {
+  padding-bottom: 20px;
+
   color: @text-dark;
+
+  @media (min-width: @tablet) {
+    padding-bottom: 30px;
+  }
 }
 
 .page-content__title {
