--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -29,6 +29,10 @@
   @media (min-width: @tablet) {
     padding: 20px;
   }
+
+  @media (min-width: @desktop) {
+    padding: 25px;
+  }
 }
 
 .module__title {
@@ -115,5 +119,9 @@
 
     font-size: 24px;
     line-height: 28px;
+  }
+
+  @media (min-width: @desktop) {
+    padding: 25px;
   }
 }
