--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -1,4 +1,6 @@
 .module {
+  position: relative;
+
   background-color: @gray-light;
   border-radius: 20px;
 
@@ -8,6 +10,10 @@
 
     .module__message {
       background-color: @gray-dark;
+    }
+
+    .module__close {
+      display: block;
     }
   }
 }
@@ -19,6 +25,31 @@
 
   &:hover {
     background-color: @orange-dark;
+  }
+}
+
+.module__close {
+  position: absolute;
+
+  top: 20px;
+  right: 20px;
+
+  display: none;
+  width: 14px;
+  height: 14px;
+
+  background-color: transparent;
+  background-image: url("../images/cross.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+
+  border: none;
+
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    opacity: 0.5;
   }
 }
 
