--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -26,6 +26,10 @@
   &:hover {
     background-color: @orange-dark;
   }
+
+  .module__close {
+    color: #ffffff;
+  }
 }
 
 .module__close {
@@ -34,14 +38,14 @@
   top: 20px;
   right: 20px;
 
-  display: none;
+  display: block;
   width: 14px;
   height: 14px;
+  padding: 0;
+
+  color: #666666;
 
   background-color: transparent;
-  background-image: url("../images/cross.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
 
   border: none;
 
