--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -38,7 +38,7 @@
   top: 20px;
   right: 20px;
 
-  display: block;
+  display: none;
   width: 14px;
   height: 14px;
   padding: 0;
@@ -87,26 +87,24 @@
     font-size: 24px;
     line-height: 28px;
   }
+}
 
-  &::before {
-    content: "";
+.module__icon {
+  position: absolute;
+  top: 50%;
+  left: 0;
 
-    position: absolute;
-    top: 50%;
-    left: 0;
+  display: block;
+  width: 35px;
+  height: 35px;
 
-    display: block;
-    width: 35px;
-    height: 35px;
+  background-color: rebeccapurple;
 
-    background-color: rebeccapurple;
+  transform: translateY(-50%);
 
-    transform: translateY(-50%);
-
-    @media (min-width: @tablet) {
-      width: 50px;
-      height: 50px;
-    }
+  @media (min-width: @tablet) {
+    width: 50px;
+    height: 50px;
   }
 }
 
