--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -82,7 +82,7 @@
   line-height: 17px;
 
   @media (min-width: @tablet) {
-    padding-left: 60px;
+    padding-left: 65px;
 
     font-size: 24px;
     line-height: 28px;
@@ -94,11 +94,10 @@
   top: 50%;
   left: 0;
 
-  display: block;
+  display: flex;
+  align-items: center;
   width: 35px;
   height: 35px;
-
-  background-color: rebeccapurple;
 
   transform: translateY(-50%);
 
