--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -82,6 +82,7 @@
   line-height: 17px;
 
   @media (min-width: @tablet) {
+    margin-bottom: 25px;
     padding-left: 65px;
 
     font-size: 24px;
@@ -104,6 +105,16 @@
   @media (min-width: @tablet) {
     width: 50px;
     height: 50px;
+  }
+
+  svg {
+    width: auto;
+    height: 35px;
+
+    @media (min-width: @tablet) {
+      width: auto;
+      height: 50px;
+    }
   }
 }
 
@@ -130,6 +141,10 @@
 
 .module__type {
   display: block;
+
+  @media (min-width: @tablet) {
+    margin-bottom: 15px;
+  }
 }
 
 .module__date {
@@ -155,5 +170,15 @@
 
   @media (min-width: @desktop) {
     padding: 25px;
+  }
+}
+
+.module__image {
+  width: 100%;
+  height: auto;
+  margin-top: 20px;
+
+  @media (min-width: @tablet) {
+    margin-top: 30px;
   }
 }
