--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -30,6 +30,10 @@
   .module__close {
     color: #ffffff;
   }
+
+  .module__icon {
+    color: #ffffff;
+  }
 }
 
 .module__close {
@@ -99,6 +103,8 @@
   align-items: center;
   width: 35px;
   height: 35px;
+
+  color: #333333;
 
   transform: translateY(-50%);
 
