--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -12,7 +12,8 @@
       background-color: @gray-dark;
     }
 
-    .module__close {
+    .module__close,
+    .module__next {
       display: block;
     }
   }
@@ -27,7 +28,8 @@
     background-color: @orange-dark;
   }
 
-  .module__close {
+  .module__close,
+  .module__next {
     color: #ffffff;
   }
 
@@ -36,10 +38,10 @@
   }
 }
 
-.module__close {
+.module__close,
+.module__next {
   position: absolute;
 
-  top: 20px;
   right: 20px;
 
   display: none;
@@ -59,6 +61,14 @@
   &:focus {
     opacity: 0.5;
   }
+}
+
+.module__close {
+  top: 20px;
+}
+
+.module__next {
+  bottom: 20px;
 }
 
 .module__top {
