--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -12,7 +12,7 @@
 @gray: #e2e2e2;
 @gray-light: #fafafa;
 @gray-dark: #f3f3f3;
-@gray-darker: #e5e5e5;
+@gray-darker: #c8c8c8;
 
 @text-dark: #333333;
 @text-light: #858585;
