--- a/source/less/block/player.less
+++ b/source/less/block/player.less
@@ -1,3 +1,54 @@
 .player {
+  margin-top: 20px;
+}
 
+.player__song {
+  display: flex;
+
+  img {
+    width: 53px;
+    height: 53px;
+    margin-right: 15px;
+  }
+}
+
+.player__progress {
+  position: relative;
+
+  display: block;
+  width: 100%;
+  height: 1px;
+  margin-top: 15px;
+
+  background-color: #979797;
+}
+
+.player__name {
+  margin: 0;
+}
+
+.player__button {
+  position: absolute;
+
+  top: -10px;
+  left: 20%;
+
+  display: block;
+  width: 6px;
+  height: 20px;
+  padding: 0;
+
+  background-color: #d8d8d8;
+  border-radius: 5px;
+
+  &:hover,
+  &:focus {
+    background-color: #979797;
+  }
+}
+
+.player__time {
+  font-size: 14px;
+  line-height: 17px;
+  color: #a1a1a1;
 }
