Переделывает на rem

--- a/source/less/block/header-menu.less
+++ b/source/less/block/header-menu.less
@@ -26,9 +26,10 @@
 }
 
 .header-menu__link {
+  .font-size(16);
+  .line-height(20);
+
   font-weight: bold;
-  font-size: 16px;
-  line-height: 20px;
   color: @text-dark;
   text-decoration: none;
 
