--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -88,6 +88,9 @@
 }
 
 .module__title {
+  .font-size(14);
+  .line-height(17);
+
   position: relative;
 
   margin: 0;
@@ -95,15 +98,13 @@
   padding-left: 50px;
 
   font-weight: bold;
-  font-size: 14px;
-  line-height: 17px;
 
   @media (min-width: @tablet) {
+    .font-size(24);
+    .line-height(28);
+
     margin-bottom: 25px;
     padding-left: 65px;
-
-    font-size: 24px;
-    line-height: 28px;
   }
 }
 
@@ -138,15 +139,15 @@
 }
 
 .module__details {
+  .font-size(12);
+  .line-height(14);
+
   display: flex;
   justify-content: space-between;
 
-  font-size: 12px;
-  line-height: 14px;
-
   @media (min-width: @tablet) {
-    font-size: 18px;
-    line-height: 21px;
+    .font-size(18);
+    .line-height(21);
   }
 }
 
@@ -171,21 +172,22 @@
 }
 
 .module__message {
+  .font-size(18);
+  .line-height(22);
+
   margin-top: auto;
   padding: 15px;
 
-  font-size: 18px;
-  line-height: 22px;
   color: @text-dark;
 
   background-color: @gray-light;
   border-radius: 19px;
 
   @media (min-width: @tablet) {
-    padding: 20px;
+    .font-size(24);
+    .line-height(28);
 
-    font-size: 24px;
-    line-height: 28px;
+    padding: 20px;
   }
 
   @media (min-width: @desktop) {
@@ -204,19 +206,19 @@
 }
 
 .module__bottom {
+  .font-size(14);
+  .line-height(16);
+
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
 
-  font-size: 14px;
-  line-height: 16px;
-
   @media (min-width: @tablet) {
+    .font-size(18);
+    .line-height(21);
+
     justify-content: flex-start;
     margin-top: 30px;
-
-    font-size: 18px;
-    line-height: 21px;
   }
 }
 
