--- a/source/less/block/button.less
+++ b/source/less/block/button.less
@@ -1,11 +1,12 @@
 .button {
+  .font-size(20);
+  .line-height(23);
+
   width: 100%;
   max-width: 130px;
   padding: 10px 15px;
 
   font-weight: bold;
-  font-size: 20px;
-  line-height: 23px;
 
   border: none;
   border-radius: 8px;
