--- a/source/less/block/page-content.less
+++ b/source/less/block/page-content.less
@@ -9,19 +9,20 @@
 }
 
 .page-content__title {
+  .font-size(24);
+  .line-height(28);
+
   margin: 0;
   margin-top: 15px;
   margin-bottom: 20px;
 
-  font-size: 24px;
-  line-height: 28px;
   color: @text-dark;
 
   @media (min-width: @tablet) {
+    .font-size(36);
+    .line-height(42);
+
     margin-top: 35px;
     margin-bottom: 35px;
-
-    font-size: 36px;
-    line-height: 42px;
   }
 }
