--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -7,7 +7,9 @@
   background-color: @gray-light;
   border-radius: 20px;
 
-  &:hover {
+  &:hover,
+  &:focus,
+  &:focus-within {
     background-color: @gray-dark;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
 
@@ -27,7 +29,9 @@
 
   background-color: @orange;
 
-  &:hover {
+  &:hover,
+  &:focus,
+  &:focus-within {
     background-color: @orange-dark;
   }
 
