--- a/source/less/block/player.less
+++ b/source/less/block/player.less
@@ -1,5 +1,11 @@
 .player {
-  margin-top: 20px;
+  margin: 0;
+  margin-top: auto;
+}
+
+.player__text {
+  margin: 0;
+  margin-bottom: 15px;
 }
 
 .player__song {
