--- a/source/less/block/player.less
+++ b/source/less/block/player.less
@@ -8,11 +8,20 @@
   margin-bottom: 15px;
 }
 
+.player__right {
+  position: relative;
+
+  width: 100%;
+
+  overflow: hidden;
+}
+
 .player__song {
   display: flex;
 
   img {
     width: 53px;
+    min-width: 53px;
     height: 53px;
     margin-right: 15px;
   }
@@ -23,6 +32,7 @@
 
   display: block;
   width: 100%;
+  max-width: calc(100% - 35px);
   height: 1px;
   margin-top: 15px;
 
@@ -30,12 +40,17 @@
 }
 
 .player__name {
+  max-width: calc(100% - 30px);
   margin: 0;
+
+  overflow: hidden;
+
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .player__button {
   position: absolute;
-
   top: -10px;
   left: 20%;
 
@@ -57,5 +72,16 @@
   .font-size(14);
   .line-height(17);
 
+  position: absolute;
+  right: -15px;
+  bottom: 8px;
+
+  display: block;
+  width: 40px;
+
   color: #a1a1a1;
+
+  @media (min-width: @tablet) {
+    bottom: 0;
+  }
 }
