--- a/source/less/block/player.less
+++ b/source/less/block/player.less
@@ -8,7 +8,7 @@
   .line-height(22);
 
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 
   @media (min-width: @tablet) {
     .font-size(20);
@@ -35,7 +35,7 @@
   }
 }
 
-.player__progress {
+.player__line {
   position: relative;
 
   display: block;
@@ -78,9 +78,11 @@
   background-color: #d8d8d8;
   border-radius: 5px;
 
+  cursor: pointer;
+
   &:hover,
   &:focus {
-    background-color: #979797;
+    background-color: #939393;
   }
 }
 
@@ -98,6 +100,77 @@
   color: #a1a1a1;
 
   @media (min-width: @tablet) {
-    bottom: 0;
+    bottom: 5px;
   }
 }
+
+.player__controls {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+
+  .player__right {
+    overflow: visible;
+  }
+
+  .player__line {
+    height: 4px;
+    margin: 0;
+
+    background-color: rgba(216, 216, 216, 0.3);
+    border-radius: 2px;
+  }
+
+  .player__button {
+    top: -6px;
+    left: 70%;
+
+    width: 16px;
+    height: 16px;
+
+    background-color: #605757;
+    border-radius: 25px;
+
+    &:hover,
+    &:focus {
+      background-color: #333333;
+    }
+  }
+
+  .player__time {
+    bottom: -8px;
+  }
+}
+
+.player__controls-wrap {
+  display: flex;
+  margin: 0;
+  margin-right: 10px;
+}
+
+.player__control {
+  display: block;
+  width: 53px;
+  height: 53px;
+  padding: 0;
+
+  background-color: transparent;
+  background-image: url("../images/arrow.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  border: none;
+
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+  }
+}
+
+.player__control--prev {
+  margin-right: 10px;
+}
+
+.player__control--next {
+  transform: rotate(180deg);
+}
+
