--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -215,10 +215,13 @@
   }
 }
 
-.module__image {
+.module__image,
+.module__graph {
   width: 100%;
   height: auto;
   margin-top: 20px;
+
+  border-radius: 20px;
 
   @media (min-width: @tablet) {
     margin-top: 30px;
