--- a/source/partials/page-footer.html
+++ b/source/partials/page-footer.html
@@ -14,6 +14,9 @@
         <li class="footer-menu__item">
           <a class="footer-menu__link" href="#">Условия использования</a>
         </li>
+        <li class="footer-menu__item">
+          <a class="footer-menu__link" href="images/license.pdf">Лицензия</a>
+        </li>
       </ul>
     </nav>
     <p class="page-footer__copyright">© 2001–2018 ООО «Яндекс»</p>
