--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -184,14 +184,19 @@ textarea {
   -webkit-appearance: button;
   font: inherit;
 }
+@font-face {
+  font-family: "Gingham";
+  src: url("../fonts/gingham.woff2") format("woff2"), url("../fonts/gingham.woff2") format("woff2-variations");
+}
 html {
   height: 100%;
   min-height: 100%;
   font-weight: normal;
   font-size: 12px;
   line-height: 14px;
-  font-family: "Arial", sans-serif;
+  font-family: "Gingham", "Arial", sans-serif;
   color: #858585;
+  font-variation-settings: "wght" 300, "wdth" 75;
 }
 body {
   position: relative;
