--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Gingham";
+  src: url("../fonts/gingham.woff2") format("woff2"), url("../fonts/gingham.woff2") format("woff2-variations");
+}
+
 html {
   height: 100%;
   min-height: 100%;
@@ -5,8 +10,9 @@ html {
   font-weight: normal;
   font-size: 12px;
   line-height: 14px;
-  font-family: "Arial", sans-serif;
+  font-family: "Gingham", "Arial", sans-serif;
   color: @text-light;
+  font-variation-settings: "wght" 300, "wdth" 75;
 }
 
 body {
