--- a/source/less/block/player.less
+++ b/source/less/block/player.less
@@ -19,7 +19,7 @@
 .player__right {
   position: relative;
 
-  width: 100%;
+  width: calc(100% - 70px);
 
   overflow: hidden;
 }
@@ -31,7 +31,11 @@
     width: 53px;
     min-width: 53px;
     height: 53px;
-    margin-right: 15px;
+    margin-right: 10px;
+
+    @media (min-width: @mobile-l) {
+      margin-right: 15px;
+    }
   }
 }
 
@@ -86,7 +90,7 @@
   }
 }
 
-.player__time {
+.player__num {
   .font-size(14);
   .line-height(17);
 
@@ -110,6 +114,8 @@
   margin-top: 20px;
 
   .player__right {
+    width: calc(100% - 130px);
+
     overflow: visible;
   }
 
@@ -119,6 +125,10 @@
 
     background-color: rgba(216, 216, 216, 0.3);
     border-radius: 2px;
+  }
+
+  .player__num {
+    bottom: -6px;
   }
 
   .player__button {
