--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -7,12 +7,13 @@ html {
   height: 100%;
   min-height: 100%;
 
-  font-weight: normal;
+  font-weight: 400;
   font-size: 12px;
   line-height: 14px;
-  font-family: "Gingham", "Arial", sans-serif;
+  font-family: "Arial", sans-serif;
+  /*font-family: "Gingham", "Arial", sans-serif;*/
   color: @text-light;
-  font-variation-settings: "wght" 300, "wdth" 75;
+  /*font-variation-settings: "wght" 400, "wdth" 100;*/
 }
 
 body {
