--- a/source/less/block/player.less
+++ b/source/less/block/player.less
@@ -1,19 +1,6 @@
 .player {
   margin: 0;
-  margin-top: auto;
-}
-
-.player__text {
-  .font-size(18);
-  .line-height(22);
-
-  margin: 0;
-  margin-bottom: 20px;
-
-  @media (min-width: @tablet) {
-    .font-size(20);
-    .line-height(23);
-  }
+  margin-top: 20px;
 }
 
 .player__right {
