Чинит плеер и высоты заголовков

--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -107,11 +107,16 @@
   font-weight: bold;
 
   @media (min-width: @tablet) {
-    .font-size(24);
-    .line-height(28);
+    .font-size(20);
+    .line-height(25);
 
     margin-bottom: 25px;
     padding-left: 65px;
+  }
+
+  @media (min-width: @desktop-s) {
+    .font-size(24);
+    .line-height(28);
   }
 }
 
