--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -721,12 +721,20 @@ input[type="radio"].visually-hidden {
 }
 @media (min-width: 768px) {
   .module__title {
+    font-size: 20px;
+    font-size: 1.6666666666666667rem;
+    line-height: 25px;
+    line-height: 2.0833333333333335rem;
+    margin-bottom: 25px;
+    padding-left: 65px;
+  }
+}
+@media (min-width: 950px) {
+  .module__title {
     font-size: 24px;
     font-size: 2rem;
     line-height: 28px;
     line-height: 2.3333333333333335rem;
-    margin-bottom: 25px;
-    padding-left: 65px;
   }
 }
 .module__icon {
@@ -934,8 +942,7 @@ input[type="radio"].visually-hidden {
 }
 .player__right {
   position: relative;
-  width: calc(100% - 70px);
-  overflow: hidden;
+  width: 100%;
 }
 .player__song {
   display: -webkit-box;
@@ -962,12 +969,21 @@ input[type="radio"].visually-hidden {
   margin-top: 15px;
   background-color: #979797;
 }
+.player__name-wrap {
+  position: relative;
+  width: 100%;
+  height: 23px;
+  overflow: hidden;
+}
 .player__name {
   font-size: 18px;
   font-size: 1.5rem;
   line-height: 21px;
   line-height: 1.75rem;
-  max-width: calc(100% - 30px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 100%;
   margin: 0;
   overflow: hidden;
   white-space: nowrap;
