--- a/source/less/block/player.less
+++ b/source/less/block/player.less
@@ -6,9 +6,7 @@
 .player__right {
   position: relative;
 
-  width: calc(100% - 70px);
-
-  overflow: hidden;
+  width: 100%;
 }
 
 .player__song {
@@ -38,11 +36,24 @@
   background-color: #979797;
 }
 
+.player__name-wrap {
+  position: relative;
+
+  width: 100%;
+  height: 23px;
+
+  overflow: hidden;
+}
+
 .player__name {
   .font-size(18);
   .line-height(21);
 
-  max-width: calc(100% - 30px);
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  max-width: 100%;
   margin: 0;
 
   overflow: hidden;
