--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -16,17 +16,19 @@
 }
 
 .wrap () {
-  max-width: 2000px;
+  max-width: 100%;
   margin: 0 auto;
   padding-right: 20px;
   padding-left: 20px;
 
   @media (min-width: @tablet) {
-    max-width: 1200px;
+    max-width: 1100px;
+    padding-right: 30px;
+    padding-left: 30px;
   }
 
   @media (min-width: @desktop) {
-    max-width: 1920px;
+    max-width: 2000px;
     padding-right: 40px;
     padding-left: 40px;
   }
