--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -194,10 +194,10 @@ html {
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
-  font-family: "Arial", sans-serif;
-  /*font-family: "Gingham", "Arial", sans-serif;*/
+  font-family: "Gingham", "Arial", sans-serif;
+  /* Что-то не нашла бесплатных вариативных с кириллицей :/ */
   color: #858585;
-  /*font-variation-settings: "wght" 400, "wdth" 100;*/
+  font-variation-settings: "wght" 450, "wdth" 125;
 }
 body {
   position: relative;
