--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -10,10 +10,9 @@ html {
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
-  font-family: "Arial", sans-serif;
-  /*font-family: "Gingham", "Arial", sans-serif;*/
+  font-family: "Gingham", "Arial", sans-serif; /* Что-то не нашла бесплатных вариативных с кириллицей :/ */
   color: @text-light;
-  /*font-variation-settings: "wght" 400, "wdth" 100;*/
+  font-variation-settings: "wght" 450, "wdth" 125;
 }
 
 body {
