--- a/source/less/block/module.less
+++ b/source/less/block/module.less
@@ -239,11 +239,15 @@
 
 .module__image,
 .module__graph {
+  display: block;
   width: 100%;
   height: auto;
-  margin-top: 20px;
 
   border-radius: 20px;
+}
+
+.module__graph {
+  margin-top: 20px;
 
   @media (min-width: @tablet) {
     margin-top: 30px;
@@ -309,5 +313,47 @@
     @media (min-width: @tablet) {
       margin-right: 20px;
     }
+  }
+}
+
+.module__picture {
+  position: relative;
+
+  display: block;
+  margin-top: 20px;
+
+  @media (min-width: @tablet) {
+    margin-top: 30px;
+  }
+}
+
+.module__indicator {
+  position: absolute;
+  bottom: 7px;
+  left: 30%;
+
+  display: block;
+  width: 30%;
+  height: 2px;
+
+  background-color: #000000;
+  border-radius: 2px;
+  opacity: 0.5;
+
+  @media (min-width: @tablet) {
+    display: none;
+  }
+}
+
+.module__cam-details {
+  .font-size(12);
+  .line-height(14);
+
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3px;
+
+  @media (min-width: @tablet) {
+    display: none;
   }
 }
